@startuml

title __APP's Class Diagram__\n

  package com.example.sample2 {
    class BuildConfig {
    }
  }
  

  package com.example.sample2 {
    class Cube {
    }
  }
  

  package com.example.sample2 {
    class Cubee {
    }
  }
  

  package com.example.sample2 {
    class ExampleInstrumentedTest {
    }
  }
  

  package com.example.sample2 {
    class Heaxgon {
    }
  }
  

  package com.example.sample2 {
    class MainActivity {
    }
  }
  

  package com.example.sample2 {
    class ShaderUtil {
    }
  }
  

  package com.example.sample2 {
    class data {
    }
  }
  

  package com.example.sample2 {
    class dynamic_Cube {
    }
  }
  

  package com.example.sample2 {
    class mySurfaceView {
    }
  }
  

  package com.example.sample2 {
    class myrec {
    }
  }
  

  package com.example.sample2 {
    class myrec2 {
    }
  }
  

  package com.example.sample2 {
    class point {
    }
  }
  

  package com.example.sample2 {
    class point3d {
    }
  }
  

  MainActivity -up-|> AppCompatActivity
  dynamic_Cube -up-|> Cube
  dynamic_Cube o-- myrec2 : tmp
  mySurfaceView -up-|> GLSurfaceView
  mySurfaceView o-- SceneRenderer : mRenderer
  mySurfaceView o-- translateThread : T1
  myrec -up-|> Cloneable
  myrec o-- point3d : p1
  myrec o-- point3d : p2
  myrec o-- point3d : p3
  myrec o-- point3d : p4
  myrec2 -up-|> Cloneable
  myrec2 o-- point3d : p1
  myrec2 o-- point3d : p2
  myrec2 o-- point3d : p3
  myrec2 o-- point3d : p4
  myrec2 o-- point3d : p5
  myrec2 o-- point3d : p6
  myrec2 o-- point3d : p7
  myrec2 o-- point3d : p8
  point3d -up-|> Cloneable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
